--- a/index.html
+++ b/index.html
@@ -2,41 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Qlik OAuth Embedding</title>
-  <script>
-    const tenantUrl = "https://keyruspt.eu.qlikcloud.com.qlikcloud.com";
-    const clientId = "1bcfdbe59d689c9dfd05f168ff04f6a8";
-    const redirectUri = window.location.origin + window.location.pathname;
-
-    function getAccessTokenFromUrl() {
-      const hash = window.location.hash;
-      if (hash) {
-        const params = new URLSearchParams(hash.substring(1));
-        return params.get("access_token");
-      }
-      return null;
-    }
-
-    function redirectToAuth() {
-      const authUrl = `${tenantUrl}/login/oauth2/authorize?client_id=${clientId}&response_type=token&redirect_uri=${encodeURIComponent(redirectUri)}&scope=openid profile email`;
-      window.location.href = authUrl;
-    }
-
-    const token = getAccessTokenFromUrl();
-
-    if (!token) {
-      redirectToAuth();
-    } else {
-      document.addEventListener("DOMContentLoaded", () => {
-        const iframe = document.createElement("iframe");
-        iframe.src = `${tenantUrl}/single/?appid=2600467e-7e6c-4c36-9fb4-2139caa1cb4d&sheet=pwn&theme=classic&qlik-ticket=${token}`;
-        iframe.style = "width: 100%; height: 600px; border: none;";
-        document.body.appendChild(iframe);
-      });
-    }
-  </script>
+  <title>Crear usuario con Impersonation</title>
 </head>
 <body>
-  <h2>Aplicación Qlik Sense embebida con OAuth</h2>
+  <h1>Crear usuario en Qlik Sense Cloud vía OAuth Impersonation</h1>
+  <button onclick="createUser()">Crear usuario</button>
+  <pre id="output"></pre>
+
+  <script>
+    async function createUser() {
+      const tokenEndpoint = "https://keyruspt.eu.qlikcloud.com/oauth/token";
+
+      const payload = {
+        client_id: "f6706182174fc70842b6161db71246ba",
+        client_secret: "0cb9d1b9c63450eecd4143ffa161f53154ed8eafc07d9658c0e261d7775688a9",
+        grant_type: "urn:qlik:oauth:user-impersonation",
+        user_lookup: {
+          field: "userId",
+          value: "67adbf58f40067e3dae55c0d"
+        },
+        scope: "user_default admin_classic"
+      };
+
+      const response = await fetch(tokenEndpoint, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(payload)
+      });
+
+      const result = await response.json();
+      document.getElementById("output").textContent = JSON.stringify(result, null, 2);
+    }
+  </script>
 </body>
 </html>
