--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           //auth_type="Oauth2",
           grant_type: "urn:qlik:oauth:user-impersonation",
           user_lookup: {
-                 field: "userId", // puede ser 'email', 'subject', 'userId'
-                 value: "6895d914e02897f0f8619fae" // ? usuario del tenant Qlik
+                 field: "subject", // puede ser 'email', 'subject', 'userId'
+                 value: "cavida.pt/ivida.hugo.santos" // ? usuario del tenant Qlik
                  //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik
                        },
           scope: "user_default"
