--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       }
     }
 
- ///   async function connectAndEmbed() {
- ///     const accessToken = await getAccessToken();
+    async function connectAndEmbed() {
+      const accessToken = await getAccessToken();
 
  ///     if (!accessToken) {
   ///      document.getElementById("result").innerText = "Não foi possível obter o token";
@@ -77,7 +77,7 @@
   ///    const iframe = document.getElementById("qlikApp");
    ///   iframe.src = iframeUrl;
     ///  iframe.style.display = "block";
-   /// }
+    }
   </script>
 </body>
 </html>
