--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           //auth_type="Oauth2",
           grant_type: "urn:qlik:oauth:user-impersonation",
           user_lookup: {
-                //field: "userId", // puede ser 'email', 'subject', 'userId'
-                //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik 
-                field: "subject", // puede ser 'email', 'subject', 'userId'
-                value: "cavida.pt/ivida.hugo.santos" // ? usuario del tenant Qlik
+                field: "userId", // puede ser 'email', 'subject', 'userId'
+                value: "6895e4c17ff768fc103e1cec" // ? usuario del tenant Qlik 
+                //field: "subject", // puede ser 'email', 'subject', 'userId'
+                //value: "cavida.pt/ivida.hugo.santos" // ? usuario del tenant Qlik
                  //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik
                        },
           scope: "user_default frame-ancestors admin_classic apps"
