--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           //auth_type="Oauth2",
           grant_type: "urn:qlik:oauth:user-impersonation",
           user_lookup: {
-                field: "userId", // puede ser 'email', 'subject', 'userId'
-                value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik 
+                field: "subject", // puede ser 'email', 'subject', 'userId'
+                value: "auth0|2fd068eb38b1aeac83b474e6117e37793d369a1fc64f92cf930535571fd5c5b8" // ? usuario del tenant Qlik 
                 //field: "subject", // puede ser 'email', 'subject', 'userId'
                 //value: "cavida.pt/ivida.hugo.santos" // ? usuario del tenant Qlik
                  //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik
