--- a/index.html
+++ b/index.html
@@ -1,85 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Embed Qlik App using OAuth M2M</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; }
-    iframe { width: 100%; height: 1000px; border: none; margin-top: 20px; }
-    #result { margin-top: 20px; white-space: pre-wrap; }
-  </style>
+  <title>Qlik Embed con token desde backend</title>
+  <script
+    crossorigin="anonymous"
+    type="application/javascript"
+    src="https://cdn.jsdelivr.net/npm/@qlik/embed-web-components@1/dist/index.min.js"
+    data-host="https://keyruspt.eu.qlikcloud.com"
+    data-client-id="f6706182174fc70842b6161db71246ba"
+    data-get-access-token="getAccessToken"
+    data-auth-type="Oauth2"
+  ></script>
 </head>
 <body>
-  <h1>Embed Qlik App con OAuth M2M</h1>
-  <button onclick="connectAndEmbed()">Conectar e Embutir Aplicação</button>
-  <div id="result"></div>
-  <iframe id="qlikApp" style="display: none;"></iframe>
+  <h1>Ejemplo Qlik Embed Web Components</h1>
+  
+  <!-- Aquí podrías usar los componentes de Qlik, por ejemplo un botón para abrir app -->
 
   <script>
     async function getAccessToken() {
-      const options = {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Accept": "application/json",
-        },
-        body: JSON.stringify({
-          client_id: "f6706182174fc70842b6161db71246ba",
-          client_secret: "0cb9d1b9c63450eecd4143ffa161f53154ed8eafc07d9658c0e261d7775688a9",
-          //auth_type="Oauth2",
-          grant_type: "urn:qlik:oauth:user-impersonation",
-          user_lookup: {
-                field: "subject", // puede ser 'email', 'subject', 'userId'
-                value: "auth0|2fd068eb38b1aeac83b474e6117e37793d369a1fc64f92cf930535571fd5c5b8" // ? usuario del tenant Qlik 
-                //field: "subject", // puede ser 'email', 'subject', 'userId'
-                //value: "cavida.pt/ivida.hugo.santos" // ? usuario del tenant Qlik
-                 //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik
-                       },
-          scope: "user_default frame-ancestors admin_classic apps"
-          //grant_type: "client_credentials",
-          //impersonated_user: "Juan Gonçalves",
-          //scope: "user_default admin_classic impersonate"
-        })
-      };
+      try {
+        const response = await fetch("/access-token", {
+          method: "POST",
+          credentials: "include",  // si usas cookies, o ajustar según tu backend
+          mode: "same-origin",
+          redirect: "follow",
+        });
 
-      const response = await fetch("https://keyruspt.eu.qlikcloud.com/oauth/token", options);
-
-      if (response.ok) {
-        const tokenInfo = await response.json();
-        return tokenInfo.access_token;
-      } else {
-        console.error("Erro ao obter token");
-        return null;
+        if (response.ok) {
+          const token = await response.text();
+          return token;
+        } else {
+          throw new Error(`Error al obtener token: ${response.status}`);
+        }
+      } catch (error) {
+        console.error("Error en getAccessToken:", error);
+        throw error;
       }
-    }
-
-    async function connectAndEmbed() {
-      const accessToken = await getAccessToken();
-
-      if (!accessToken) {
-        document.getElementById("result").innerText = "Não foi possível obter o token";
-        return;
-      }
-
-      document.getElementById("result").innerText = "Token obtido. Incorporando a aplicação...";
-
-      // Ajusta estos valores con tu app y hoja reales
-      //const appId = "2600467e-7e6c-4c36-9fb4-2139caa1cb4d";
-      const appId = "1cca6f73-04b9-4f6f-8915-7408eae55fda";
-      //const sheetId = "pwn"; // Opcional
-      const sheetId = "qrNSBP"; // Opcional
-      const tenant = "keyruspt.eu.qlikcloud.com";
-
-      
-      //const iframeUrl = "https://keyruspt.eu.qlikcloud.com/single/?appid=2600467e-7e6c-4c36-9fb4-2139caa1cb4d&sheet=pwn&theme=horizon&opt=ctxmenu,currsel";
-      const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}`;
-      //const iframeUrl = `https://${tenant}/sense/app/${appId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}`;
-      //const iframeUrl = `https://keyruspt.eu.qlikcloud.com/sense/app/2600467e-7e6c-4c36-9fb4-2139caa1cb4d/sheet/pwn/state/analysis&qlik-token=${accessToken}`;
-      //https://keyruspt.eu.qlikcloud.com/sense/app/2600467e-7e6c-4c36-9fb4-2139caa1cb4d/sheet/pwn/state/analysis&
-
-      const iframe = document.getElementById("qlikApp");
-      iframe.src = iframeUrl;
-      iframe.style.display = "block";
     }
   </script>
 </body>
