--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 value: "cavida.pt/ivida.hugo.santos" // ? usuario del tenant Qlik
                  //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik
                        },
-          scope: "user_default frame-ancestors"
+          scope: "user_default admin_classic apps"
           //grant_type: "client_credentials",
           //impersonated_user: "Juan Gonçalves",
           //scope: "user_default admin_classic impersonate"
