--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Embed Qlik App using OAuth M2M</title>
+  <title>Embed Qlik Sense App con OAuth M2M y Impersonation</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 40px; }
-    iframe { width: 100%; height: 1000px; border: none; margin-top: 20px; }
-    #result { margin-top: 20px; white-space: pre-wrap; }
+    iframe { width: 100%; height: 900px; border: none; margin-top: 20px; }
+    #result { margin-top: 20px; white-space: pre-wrap; color: green; }
+    #error { margin-top: 20px; color: red; white-space: pre-wrap; }
   </style>
 </head>
 <body>
-  <h1>Embed Qlik App con OAuth M2M</h1>
-  <button onclick="connectAndEmbed()">Conectar e Embutir Aplicação</button>
+  <h1>Embed Qlik Sense con OAuth M2M e Impersonation</h1>
+  <button onclick="connectAndEmbed()">Conectar y Cargar App</button>
   <div id="result"></div>
-  <iframe id="qlikApp" style="display: none;"></iframe>
+  <div id="error"></div>
+  <iframe id="qlikApp" style="display:none;"></iframe>
 
   <script>
     async function getAccessToken() {
@@ -21,63 +23,52 @@
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          "Accept": "application/json",
+          "Accept": "application/json"
         },
         body: JSON.stringify({
           client_id: "f6706182174fc70842b6161db71246ba",
           client_secret: "0cb9d1b9c63450eecd4143ffa161f53154ed8eafc07d9658c0e261d7775688a9",
-          //auth_type="Oauth2",
           grant_type: "urn:qlik:oauth:user-impersonation",
           user_lookup: {
-                //field: "userId", // puede ser 'email', 'subject', 'userId'
-                //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik 
-                field: "subject", // puede ser 'email', 'subject', 'userId'
-                value: "cavida.pt/ivida.hugo.santos" // ? usuario del tenant Qlik
-                 //value: "67adbf58f40067e3dae55c0d" // ? usuario del tenant Qlik
-                       },
-          scope: "user_default admin_classic apps"
-          //grant_type: "client_credentials",
-          //impersonated_user: "Juan Gonçalves",
-          //scope: "user_default admin_classic impersonate"
+            field: "subject",   // o "email" o "userId"
+            value: "cavida.pt/ivida.hugo.santos"
+          },
+          scope: "user_default apps frame-ancestors"
         })
       };
 
       const response = await fetch("https://keyruspt.eu.qlikcloud.com/oauth/token", options);
-
-      if (response.ok) {
-        const tokenInfo = await response.json();
-        return tokenInfo.access_token;
-      } else {
-        console.error("Erro ao obter token");
-        return null;
+      if (!response.ok) {
+        const errorText = await response.text();
+        throw new Error(`Error obteniendo token: ${response.status} - ${errorText}`);
       }
+      const data = await response.json();
+      return data.access_token;
     }
 
     async function connectAndEmbed() {
-      const accessToken = await getAccessToken();
+      document.getElementById("result").innerText = "";
+      document.getElementById("error").innerText = "";
+      document.getElementById("qlikApp").style.display = "none";
 
-      if (!accessToken) {
-        document.getElementById("result").innerText = "Não foi possível obter o token";
-        return;
+      try {
+        const accessToken = await getAccessToken();
+        document.getElementById("result").innerText = "Token obtenido correctamente. Cargando app...";
+
+        const tenant = "keyruspt.eu.qlikcloud.com";
+        const appId = "2600467e-7e6c-4c36-9fb4-2139caa1cb4d";
+        const sheetId = "pwn"; // Opcional
+        const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk";
+
+        const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
+
+        const iframe = document.getElementById("qlikApp");
+        iframe.src = iframeUrl;
+        iframe.style.display = "block";
+
+      } catch (error) {
+        document.getElementById("error").innerText = error.message;
       }
-
-      document.getElementById("result").innerText = "Token obtido. Incorporando a aplicação...";
-
-      // Ajusta estos valores con tu app y hoja reales
-      const appId = "2600467e-7e6c-4c36-9fb4-2139caa1cb4d";
-      const sheetId = "pwn"; // Opcional
-      const tenant = "keyruspt.eu.qlikcloud.com";
-      const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk"; // pega aquí tu Web Integration ID
-
-      const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
-      //const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}`;
-      //const iframeUrl = `https://${tenant}/sense/app/${appId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}`;
-      //const iframeUrl = `https://keyruspt.eu.qlikcloud.com/sense/app/2600467e-7e6c-4c36-9fb4-2139caa1cb4d/sheet/pwn/state/analysis&qlik-token=${accessToken}`;
-      //https://keyruspt.eu.qlikcloud.com/sense/app/2600467e-7e6c-4c36-9fb4-2139caa1cb4d/sheet/pwn/state/analysis&
-
-      const iframe = document.getElementById("qlikApp");
-      iframe.src = iframeUrl;
-      iframe.style.display = "block";
     }
   </script>
 </body>
