--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             field: "subject",   // o "email" o "userId"
             value: "cavida.pt/ivida.hugo.santos"
           },
-          scope: "user_default apps frame-ancestors"
+          scope: "user_default apps admin.apps admin_classic frame-ancestors"
         })
       };
 
