--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="es">
 <head>
 <meta charset="UTF-8" />
-<title>Qlik Sense Embed</title>
+<title>Embed Qlik Sense App con OAuth M2M y Impersonation</title>
 <style>
-  html, body, iframe { margin:0; padding:0; height:100%; width:100%; border:none; }
+    body { font-family: Arial, sans-serif; margin: 40px; }
+    iframe { width: 100%; height: 900px; border: none; margin-top: 20px; }
+    #result { margin-top: 20px; white-space: pre-wrap; color: green; }
+    #error { margin-top: 20px; color: red; white-space: pre-wrap; }
 </style>
 </head>
 <body>
-  <iframe src="{{ url_for('proxy') }}" frameborder="0"></iframe>
+<h1>Embed Qlik Sense con OAuth M2M e Impersonation</h1>
+<button onclick="connectAndEmbed()">Conectar y Cargar App</button>
+<div id="result"></div>
+<div id="error"></div>
+<iframe id="qlikApp" style="display:none;"></iframe>
+ 
+  <script>
+    async function getAccessToken() {
+      const options = {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Accept": "application/json"
+        },
+        body: JSON.stringify({
+          client_id: "f6706182174fc70842b6161db71246ba",
+          client_secret: "0cb9d1b9c63450eecd4143ffa161f53154ed8eafc07d9658c0e261d7775688a9",
+          grant_type: "urn:qlik:oauth:user-impersonation",
+          user_lookup: {
+            field: "subject",   // o "email" o "userId"
+            value: "cavida.pt/ivida.hugo.santos"
+          },
+          scope: "user_default apps admin.apps admin_classic frame-ancestors"
+        })
+      };
+ 
+      const response = await fetch("https://keyruspt.eu.qlikcloud.com/oauth/token", options);
+      if (!response.ok) {
+        const errorText = await response.text();
+        throw new Error(`Error obteniendo token: ${response.status} - ${errorText}`);
+      }
+      const data = await response.json();
+      return data.access_token;
+    }
+ 
+    async function connectAndEmbed() {
+      document.getElementById("result").innerText = "";
+      document.getElementById("error").innerText = "";
+      document.getElementById("qlikApp").style.display = "none";
+ 
+      try {
+        const accessToken = await getAccessToken();
+        document.getElementById("result").innerText = "Token obtenido correctamente. Cargando app...";
+ 
+        const tenant = "keyruspt.eu.qlikcloud.com";
+        const appId = "2600467e-7e6c-4c36-9fb4-2139caa1cb4d";
+        const sheetId = "pwn"; // Opcional
+        const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk";
+ 
+        const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
+ 
+        const iframe = document.getElementById("qlikApp");
+        iframe.src = iframeUrl;
+        iframe.style.display = "block";
+ 
+      } catch (error) {
+        document.getElementById("error").innerText = error.message;
+      }
+    }
+</script>
 </body>
-</html>
