--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://jgoncalves13.github.io;">
 <meta charset="UTF-8" />
 <title>Embed Qlik Sense App con OAuth M2M y Impersonation</title>
 <style>
