--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         const sheetId = "XwLsPUk"; // Opcional
         const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk";
  
-        const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel,nochrome&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
+        const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel,nochrome,noselections&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
  
         const iframe = document.getElementById("qlikApp");
         iframe.src = iframeUrl;
