--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>Embed Qlik Sense App con OAuth M2M y Impersonation</title>
 <style>
     body { font-family: Arial, sans-serif; margin: 40px; }
-    iframe { width: 100%; height: 900px; border: none; margin-top: 20px; }
-    //iframe { width: 89.68%; height: 92.24%; border: none; margin-top: 0px; }
+    //iframe { width: 100%; height: 900px; border: none; margin-top: 20px; }
+    iframe { width: 90%; height: 92%; border: none; margin-top: 0px; }
     #result { margin-top: 20px; white-space: pre-wrap; color: green; }
     #error { margin-top: 20px; color: red; white-space: pre-wrap; }
 </style>
