--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         const tenant = "keyruspt.eu.qlikcloud.com";
         //const appId = "2600467e-7e6c-4c36-9fb4-2139caa1cb4d";
         //const sheetId = "pwn"; // Opcional
-        const appId = "447c9a69-0984-4508-8474-31f5b8fdedf5";
+        const appId = "7c30b852-4dd2-4b04-b90a-cbfebd3ca207";
         const sheetId = "XwLsPUk"; // Opcional
         const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk";
  
         //const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel,nochrome,noselections&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
           const iframeUrl = `https://${tenant}/single/?appid=${appId}&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
- 
+//<iframe src="https://keyruspt.eu.qlikcloud.com/single/?appid=7c30b852-4dd2-4b04-b90a-cbfebd3ca207&sheet=XwLsPUk&theme=horizon&opt=ctxmenu,currsel" style="border:none;width:100%;height:100%;"></iframe> 
         const iframe = document.getElementById("qlikApp");
         iframe.src = iframeUrl;
         iframe.style.display = "block";
