--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Embed Qlik Sense App con OAuth M2M y Impersonation</title>
 <style>
     body { font-family: Arial, sans-serif; margin: 40px; }
-    iframe { width: 100%; height: 100%; border: none; margin-top: 20px; }
+    iframe { width: 100%; height: 900px; border: none; margin-top: 20px; }
     #result { margin-top: 20px; white-space: pre-wrap; color: green; }
     #error { margin-top: 20px; color: red; white-space: pre-wrap; }
 </style>
@@ -59,8 +59,8 @@
         const appId = "7c30b852-4dd2-4b04-b90a-cbfebd3ca207";
         const sheetId = "XwLsPUk"; // Opcional
         const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk";
- 
-        const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
+        const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
+        //const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
         //  const iframeUrl = `https://${tenant}/sense/?appid=${appId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
         //https://keyruspt.eu.qlikcloud.com/sense/app/7c30b852-4dd2-4b04-b90a-cbfebd3ca207
         const iframe = document.getElementById("qlikApp");
