--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         const appId = "7c30b852-4dd2-4b04-b90a-cbfebd3ca207";
         const sheetId = "XwLsPUk"; // Opcional
         const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk";
-        const iframeUrl = `https://keyruspt.eu.qlikcloud.com/single/?appid=40de9651-2036-42be-a6e0-86ec38362ad0&sheet=XwLsPUk&theme=horizon&bookmark=98567387-3027-4c31-bc07-1572150872f9&opt=ctxmenu`;
+        const iframeUrl = `https://keyruspt.eu.qlikcloud.com/sense/?appid=40de9651-2036-42be-a6e0-86ec38362ad0`;
           //const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
         //"https://keyruspt.eu.qlikcloud.com/single/?appid=40de9651-2036-42be-a6e0-86ec38362ad0&sheet=XwLsPUk&theme=horizon&bookmark=98567387-3027-4c31-bc07-1572150872f9&opt=ctxmenu"
           //const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
