--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
   <header>
     <h1>Embedding Qlik Sense Cloud</h1>
-    <p>Visualização interativa integrada com segurança (OAuth + Web Integration)</p>
+    <p>Visualização interativa integrada com segurança (Web Integration)</p>
   </header>
 
   <main>
