--- a/index.html
+++ b/index.html
@@ -1,77 +1,94 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt">
 <head>
-<meta charset="UTF-8" />
-<title>Embed Qlik Sense App con OAuth M2M y Impersonation</title>
-<style>
-    body { font-family: Arial, sans-serif; margin: 40px; }
-    iframe { width: 100%; height: 900px; border: none; margin-top: 20px; }
-    #result { margin-top: 20px; white-space: pre-wrap; color: green; }
-    #error { margin-top: 20px; color: red; white-space: pre-wrap; }
-</style>
-</head>
-<body>
-<h1>Embed Qlik Sense con OAuth M2M e Impersonation</h1>
-<button onclick="connectAndEmbed()">Conectar y Cargar App</button>
-<div id="result"></div>
-<div id="error"></div>
-<iframe id="qlikApp" style="display:none;"></iframe>
- 
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Embedding Qlik Sense Cloud</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f6f9;
+      color: #333;
+    }
+    header {
+      background: #2e6da4;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-size: 14px;
+    }
+    main {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      max-width: 1500px;
+      height: 120vh;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      border-radius: 8px;
+    }
+    footer {
+      text-align: center;
+      padding: 10px;
+      background: #eee;
+      font-size: 12px;
+      color: #555;
+    }
+  </style>
+
   <script>
-    async function getAccessToken() {
-      const options = {
-        method: "POST",
+    const webIntegrationId = "mjiMv1xnxk7R0kUNZ1Fxz7gSqjd_l1J2";
+    const tenantUrl = "https://keyruspt.eu.qlikcloud.com";
+
+    async function login() {
+      const loggedIn = await fetch(`${tenantUrl}/api/v1/users/me`, {
+        method: "GET",
+        mode: "cors",
+        credentials: "include",
         headers: {
           "Content-Type": "application/json",
-          "Accept": "application/json"
+          "qlik-web-integration-id": webIntegrationId,
         },
-        body: JSON.stringify({
-          client_id: "f6706182174fc70842b6161db71246ba",
-          client_secret: "0cb9d1b9c63450eecd4143ffa161f53154ed8eafc07d9658c0e261d7775688a9",
-          grant_type: "urn:qlik:oauth:user-impersonation",
-          user_lookup: {
-            field: "subject",   // o "email" o "userId"
-            value: "cavida.pt/ivida.hugo.santos"
-          },
-          scope: "user_default apps admin.apps admin_classic frame-ancestors"
-        })
-      };
- 
-      const response = await fetch("https://keyruspt.eu.qlikcloud.com/oauth/token", options);
-      if (!response.ok) {
-        const errorText = await response.text();
-        throw new Error(`Error obteniendo token: ${response.status} - ${errorText}`);
-      }
-      const data = await response.json();
-      return data.access_token;
-    }
- 
-    async function connectAndEmbed() {
-      document.getElementById("result").innerText = "";
-      document.getElementById("error").innerText = "";
-      document.getElementById("qlikApp").style.display = "none";
- 
-      try {
-        const accessToken = await getAccessToken();
-        document.getElementById("result").innerText = "Token obtenido correctamente. Cargando app...";
- 
-        const tenant = "keyruspt.eu.qlikcloud.com";
-        const appId = "7c30b852-4dd2-4b04-b90a-cbfebd3ca207";
-        const sheetId = "XwLsPUk"; // Opcional
-        const webIntegrationId = "F5lgGsalXWNob9SEj1n-PuH-l93y9Ojk";
-        const iframeUrl = `https://keyruspt.eu.qlikcloud.com/sense/app/40de9651-2036-42be-a6e0-86ec38362ad0/state/analysis`;
-          //const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
-        //"https://keyruspt.eu.qlikcloud.com/single/?appid=40de9651-2036-42be-a6e0-86ec38362ad0&sheet=XwLsPUk&theme=horizon&bookmark=98567387-3027-4c31-bc07-1572150872f9&opt=ctxmenu"
-          //const iframeUrl = `https://${tenant}/single/?appid=${appId}&sheet=${sheetId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
-        //  const iframeUrl = `https://${tenant}/sense/?appid=${appId}&opt=ctxmenu,currsel&theme=classic&qlik-token=${accessToken}&qlik-web-integration-id=${webIntegrationId}`;
-        //https://keyruspt.eu.qlikcloud.com/sense/app/7c30b852-4dd2-4b04-b90a-cbfebd3ca207
-        const iframe = document.getElementById("qlikApp");
-        iframe.src = iframeUrl;
-        iframe.style.display = "block";
- 
-      } catch (error) {
-        document.getElementById("error").innerText = error.message;
+      }).then(res => res.status === 200);
+
+      if (!loggedIn) {
+        window.top.location.href = `${tenantUrl}/login?qlik-web-integration-id=${webIntegrationId}&returnto=${encodeURIComponent(window.location.href)}`;
       }
     }
-</script>
+
+    window.onload = login;
+  </script>
+</head>
+
+<body>
+  <header>
+    <h1>Embedding Qlik Sense Cloud</h1>
+    <p>Visualização interativa integrada com segurança (Web Integration)</p>
+  </header>
+
+  <main>
+    <iframe
+      src="https://keyruspt.eu.qlikcloud.com/sense/app/40de9651-2036-42be-a6e0-86ec38362ad0/state/analysis">
+    </iframe>
+  </main>
+
+  <footer>
+    © 2025 Qlik Sense Cloud Embed Demo – KeyrusPT
+  </footer>
 </body>
+</html>
